[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/Bar/Bar.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Unit/UnitFrames.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Scenes/EnemyCitizen/EnemyCitizen.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Unit/bag_1.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Unit/selected.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Unit/bag_3.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Unit/bag_2.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Warrior/WarriorMark.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Bar/Energy.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Bar/Background.png" type="Texture" id=10]
[ext_resource path="res://Scenes/EnemyCitizen/Animation.gd" type="Script" id=11]

[sub_resource type="Shader" id=8]
code = "shader_type canvas_item;
render_mode blend_mix;

void fragment(){
	vec4 current_color = texture(TEXTURE,UV);
	
	COLOR=vec4(1.0,0.0,0.0,current_color.a);
}"

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 8 )

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;
render_mode blend_mix;

void fragment(){
	vec4 current_color = texture(TEXTURE,UV);
	
	COLOR=vec4(1.0,0.3,0.0,current_color.a);
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )

[sub_resource type="Shader" id=10]
code = "shader_type canvas_item;
render_mode blend_mix;

void fragment(){
	vec4 current_color = texture(TEXTURE,UV);
	
	COLOR=vec4(1.0,0.0,0.0,current_color.a);
}"

[sub_resource type="ShaderMaterial" id=11]
shader = SubResource( 10 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "bag_1",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "bag_2",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "bag_3",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8.5, 13 )

[sub_resource type="CircleShape2D" id=4]
radius = 123.728

[node name="EnemyCitizen" type="KinematicBody2D"]
collision_mask = 14
input_pickable = true
script = ExtResource( 3 )
SPEED = 50.0
MAX_ENERGY_LOSS = 15.0
MIN_ENERGY_LOSS = 10.0

[node name="Selected" type="Sprite" parent="."]
material = SubResource( 9 )
position = Vector2( 0, 11 )
scale = Vector2( 0.63281, 0.49219 )
texture = ExtResource( 5 )

[node name="WarchiefMark" type="Sprite" parent="."]
visible = false
material = SubResource( 6 )
position = Vector2( 1, -18 )
scale = Vector2( 0.63281, 0.49219 )
texture = ExtResource( 8 )

[node name="Mouse_Control" type="Node" parent="."]

[node name="Bar" type="Node2D" parent="."]
position = Vector2( -7, -19 )
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="Bar"]
texture = ExtResource( 10 )
centered = false

[node name="Energy" type="Sprite" parent="Bar/Background"]
material = SubResource( 11 )
texture = ExtResource( 9 )
centered = false

[node name="shootNode" type="Node2D" parent="."]

[node name="shootPoint" type="Position2D" parent="shootNode"]
position = Vector2( 12, 0 )

[node name="all_timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="scalable" type="Node2D" parent="."]

[node name="sprite" type="AnimatedSprite" parent="scalable"]
position = Vector2( 0, -1 )
scale = Vector2( 1.58333, 1.25 )
frames = ExtResource( 2 )
animation = "male_idle3_d"

[node name="bag_sprite" type="AnimatedSprite" parent="scalable"]
frames = SubResource( 3 )
animation = "bag_1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0 )
shape = SubResource( 7 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.5, -1.5 )
shape = SubResource( 4 )

[node name="Animation" type="Node2D" parent="."]
script = ExtResource( 11 )

[connection signal="input_event" from="." to="." method="_on_Unit_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_EnemyCitizen_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_EnemyCitizen_mouse_exited"]
[connection signal="timeout" from="all_timer" to="." method="_on_all_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
